[gd_scene load_steps=11 format=3 uid="uid://dbnsg65g0jkqf"]

[ext_resource type="Script" uid="uid://cnk0djki2s0bp" path="res://Scripts/main_menu.gd" id="1_f872w"]
[ext_resource type="Texture2D" uid="uid://bqbehjk01ads1" path="res://Art/Sprites/Backgrounds/05_sky.png" id="1_oli08"]
[ext_resource type="Script" uid="uid://drqocjk5017wb" path="res://Scripts/cloudLayer.gd" id="2_texk2"]
[ext_resource type="Texture2D" uid="uid://wsrfjacr3r2b" path="res://Art/Sprites/Backgrounds/04_cloud.png" id="3_f872w"]
[ext_resource type="Texture2D" uid="uid://dcpl1qhfvsx0f" path="res://Art/Sprites/Backgrounds/03_hill_fade.png" id="4_rqmlg"]
[ext_resource type="Texture2D" uid="uid://dvpvcslxhgh20" path="res://Art/Sprites/Backgrounds/02_hill.png" id="5_44m5e"]
[ext_resource type="Texture2D" uid="uid://bo3v2nh02hnwh" path="res://Art/Sprites/Backgrounds/01_grass.png" id="6_j6tyu"]
[ext_resource type="Theme" uid="uid://bgagwfbb2plbh" path="res://Themes/gameTheme.tres" id="8_rqmlg"]
[ext_resource type="LabelSettings" uid="uid://b4ygd0rhiokqe" path="res://Fonts/labelSettings.tres" id="9_rqmlg"]
[ext_resource type="PackedScene" uid="uid://c1bg154t410gi" path="res://Nodes/Scenes/Options.tscn" id="10_44m5e"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_f872w")

[node name="Background" type="ParallaxBackground" parent="."]
scale = Vector2(0.5, 0.5)
transform = Transform2D(0.5, 0, 0, 0.5, 0, 0)

[node name="Sky" type="ParallaxLayer" parent="Background"]
position = Vector2(0, -750)

[node name="Sprite2D" type="Sprite2D" parent="Background/Sky"]
texture = ExtResource("1_oli08")
centered = false

[node name="Cloud" type="ParallaxLayer" parent="Background"]
position = Vector2(0, -750)
motion_mirroring = Vector2(2560, 0)
script = ExtResource("2_texk2")

[node name="Sprite2D" type="Sprite2D" parent="Background/Cloud"]
texture = ExtResource("3_f872w")
centered = false

[node name="HillFade" type="ParallaxLayer" parent="Background"]
position = Vector2(0, -750)
motion_scale = Vector2(0.2, 1)

[node name="Sprite2D" type="Sprite2D" parent="Background/HillFade"]
texture = ExtResource("4_rqmlg")
centered = false

[node name="Hill" type="ParallaxLayer" parent="Background"]
position = Vector2(0, -750)
motion_scale = Vector2(0.3, 1)

[node name="Sprite2D" type="Sprite2D" parent="Background/Hill"]
texture = ExtResource("5_44m5e")
centered = false

[node name="Grass" type="ParallaxLayer" parent="Background"]
position = Vector2(0, -750)
motion_scale = Vector2(0.4, 1)

[node name="Sprite2D" type="Sprite2D" parent="Background/Grass"]
texture = ExtResource("6_j6tyu")
centered = false

[node name="GrennContinuos" type="ParallaxLayer" parent="Background"]

[node name="ColorRect" type="ColorRect" parent="Background/GrennContinuos"]
offset_top = 1792.0
offset_right = 2560.0
offset_bottom = 2047.0
color = Color(0.180392, 0.8, 0.443137, 1)

[node name="MenuCanvas" type="CanvasLayer" parent="."]

[node name="Options" type="VBoxContainer" parent="MenuCanvas"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Play" type="Button" parent="MenuCanvas/Options"]
layout_mode = 2
theme = ExtResource("8_rqmlg")
text = "Play"

[node name="Options" type="Button" parent="MenuCanvas/Options"]
layout_mode = 2
text = "Options"

[node name="Exit" type="Button" parent="MenuCanvas/Options"]
layout_mode = 2
text = "Exit"

[node name="Label" type="Label" parent="MenuCanvas"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = -184.24
offset_right = 224.0
offset_bottom = -100.24
grow_horizontal = 2
grow_vertical = 2
text = "ALIEN INVASION
(placeholder)"
label_settings = ExtResource("9_rqmlg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Options" parent="." instance=ExtResource("10_44m5e")]
visible = false

[connection signal="button_down" from="MenuCanvas/Options/Play" to="." method="_on_play_button_down"]
[connection signal="button_down" from="MenuCanvas/Options/Options" to="." method="setOptionMenu"]
[connection signal="button_down" from="MenuCanvas/Options/Exit" to="." method="_on_exit_button_down"]
[connection signal="applyConfig" from="Options" to="." method="setOptionMenu"]
